--- a/blog.html
+++ b/blog.html
@@ -747,25 +747,27 @@
             <!-- Article 1 -->
             <article class="blog-card">
                 <div class="blog-img-wrap">
-                    <img src="assets/5.webp" alt="Corporate Gathering Batu Malang" class="blog-img" loading="lazy">
+                    <img src="assets/1.webp" alt="Corporate Gathering Batu Malang" class="blog-img" loading="lazy">
                 </div>
                 <div class="blog-content">
-                    <h3 class="blog-title"><a href="#">Corporate Gathering Batu Malang 2 Hari 1 Malam: Sensasi Tim
+                    <h3 class="blog-title"><a href="#">Paket Team Building Batu Malang Murah: Sensasi Tim Solid Tanpa
+                            Kuras Budget
                             Solid</a></h3>
-                    <a href="detail-corporate-gathering.html" class="blog-link">Baca Selengkapnya ➔</a>
+                    <a href="paket-team-building-batu-malang-murah.html" class="blog-link">Baca Selengkapnya ➔</a>
                 </div>
             </article>
 
             <!-- Article 2 -->
             <article class="blog-card">
                 <div class="blog-img-wrap">
-                    <img src="assets/6.webp" alt="Panduan Lengkap Memilih Jasa Outbound" class="blog-img"
+                    <img src="assets/2.webp" alt="Panduan Lengkap Memilih Jasa Outbound" class="blog-img"
                         loading="lazy">
                 </div>
                 <div class="blog-content">
-                    <h3 class="blog-title"><a href="#">Panduan Lengkap Memilih Jasa Outbound Perusahaan di Batu Malang
-                            Terbaik & Profesional</a></h3>
-                    <a href="#" class="blog-link">Baca Selengkapnya ➔</a>
+                    <h3 class="blog-title"><a href="#">Panduan Memilih Vendor Outbound Malang untuk Gathering Kantor
+                            yang Tepat</a></h3>
+                    <a href="vendor-outbound-malang-untuk-gathering-kantor.html" class="blog-link">Baca Selengkapnya
+                        ➔</a>
                 </div>
             </article>
 
@@ -776,9 +778,9 @@
                         loading="lazy">
                 </div>
                 <div class="blog-content">
-                    <h3 class="blog-title"><a href="#">Paket Outbound LDKS Sekolah di Batu Malang: Membangun Karakter
-                            Siswa Unggul</a></h3>
-                    <a href="#" class="blog-link">Baca Selengkapnya ➔</a>
+                    <h3 class="blog-title"><a href="#">Provider Rafting Kasembon Malang: Sensasi Arung Jeram Terbaik dan
+                            Teraman</a></h3>
+                    <a href="provider-rafting-kasembon-malang.html" class="blog-link">Baca Selengkapnya ➔</a>
                 </div>
             </article>
 
@@ -788,9 +790,9 @@
                     <img src="assets/8.webp" alt="10+ Rekomendasi Tempat Outbound" class="blog-img" loading="lazy">
                 </div>
                 <div class="blog-content">
-                    <h3 class="blog-title"><a href="#">10+ Rekomendasi Tempat Outbound di Batu Malang Terbaik untuk
-                            Gathering</a></h3>
-                    <a href="#" class="blog-link">Baca Selengkapnya ➔</a>
+                    <h3 class="blog-title"><a href="#">Paket Wisata dan Outbound Batu Malang Terbaik: Liburan Edukatif &
+                            Team Building Solid</a></h3>
+                    <a href="paket-wisata-dan-outbound-batu-malang.html" class="blog-link">Baca Selengkapnya ➔</a>
                 </div>
             </article>
 
@@ -801,9 +803,9 @@
                         class="blog-img" loading="lazy">
                 </div>
                 <div class="blog-content">
-                    <h3 class="blog-title"><a href="#">Panduan Lengkap Rincian Biaya Outbound di Coban Rondo Batu
-                            2026</a></h3>
-                    <a href="#" class="blog-link">Baca Selengkapnya ➔</a>
+                    <h3 class="blog-title"><a href="#">Sewa Jeep Fun Offroad Batu Malang: Panduan Lengkap Harga, Rute, &
+                            Tips Pemacu Adrenalin</a></h3>
+                    <a href="sewa-jeep-fun-offroad-batu-malang.html" class="blog-link">Baca Selengkapnya ➔</a>
                 </div>
             </article>
 
