--- a/index.html
+++ b/index.html
@@ -824,7 +824,6 @@
                         <h3 class="feature-title">Team Building</h3>
                         <p class="feature-desc">Perkuat dinamika tim Anda dengan tantangan menyenangkan yang membangun
                             komunikasi dan kerjasama solid.</p>
-                        <a href="#" class="feature-link">Lihat Detail ➔</a>
                     </div>
                 </div>
 
@@ -836,7 +835,6 @@
                         <h3 class="feature-title">Paintball War</h3>
                         <p class="feature-desc">Uji strategi dan ketangkasan dalam simulasi pertempuran yang aman dan
                             memacu adrenalin tinggi.</p>
-                        <a href="#" class="feature-link">Lihat Detail ➔</a>
                     </div>
                 </div>
 
@@ -848,7 +846,6 @@
                         <h3 class="feature-title">Fun Camping</h3>
                         <p class="feature-desc">Nikmati malam di alam terbuka dengan fasilitas nyaman, api unggun, dan
                             suasana kebersamaan yang hangat.</p>
-                        <a href="#" class="feature-link">Lihat Detail ➔</a>
                     </div>
                 </div>
             </div>
@@ -894,7 +891,6 @@
                     </svg>
                     Hubungi via WhatsApp
                 </a>
-                <a href="#" class="btn btn-outline">✉ Kirim Email</a>
             </div>
         </div>
     </section>
@@ -911,9 +907,29 @@
                     <p>Mitra terbaik untuk kegiatan outbound, gathering, dan adventure trip di kawasan sejuk Batu
                         Malang. Profesional, aman, dan berkesan.</p>
                     <div class="social-links">
-                        <a href="#" class="social-link">IG</a>
-                        <a href="#" class="social-link">FB</a>
-                        <a href="#" class="social-link">YT</a>
+                        <a href="#" class="social-link" aria-label="Instagram">
+                            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
+                                <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
+                                <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
+                            </svg>
+                        </a>
+                        <a href="#" class="social-link" aria-label="Facebook">
+                            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path>
+                            </svg>
+                        </a>
+                        <a href="#" class="social-link" aria-label="YouTube">
+                            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <path
+                                    d="M22.54 6.42a2.78 2.78 0 0 0-1.94-2C18.88 4 12 4 12 4s-6.88 0-8.6.46a2.78 2.78 0 0 0-1.94 2A29 29 0 0 0 1 11.75a29 29 0 0 0 .46 5.33 2.78 2.78 0 0 0 1.94 2c1.72.46 8.6.46 8.6.46s6.88 0 8.6-.46a2.78 2.78 0 0 0 1.94-2 29 29 0 0 0 .46-5.33 29 29 0 0 0-.46-5.33z">
+                                </path>
+                                <polygon points="9.75 15.02 15.5 11.75 9.75 8.48 9.75 15.02"></polygon>
+                            </svg>
+                        </a>
                     </div>
                 </div>
 
